--- a/src/index.css
+++ b/src/index.css
@@ -2,12 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-*{
+* {
   padding: 0;
   margin: 0;
-
 }
-body{
+body {
   background-color: #fff;
   color: black;
 }
@@ -15,6 +14,10 @@ body{
   filter: blur(5px);
   transform: scale(1.1);
 } */
+
+.active-link {
+  border-bottom: 2px solid #1e40af;
+}
 
 /* Define common styles for the buttons */
 .button {
@@ -60,7 +63,7 @@ body{
   /* background-color: #0a346f; */
   color: #ffffff;
   border: none;
-  box-shadow:5px 5px 0px #161618; 
+  box-shadow: 5px 5px 0px #161618;
 }
 .aboutMore-button:hover {
   box-shadow: none; /* Remove shadow on hover */
@@ -73,12 +76,11 @@ body{
   transition: all linear 0.3s;
 }
 
-
 /* Style for Contact Us button */
 .contact-us-button {
   background-color: #f0f4f8; /* Adjust the color to match your design */
   border: none;
-  box-shadow: -7px -7px 1px 1px #1E40AF; /* Initial shadow on top and left */
+  box-shadow: -7px -7px 1px 1px #1e40af; /* Initial shadow on top and left */
 }
 
 /* Hover effect for Contact Us button */
